# cosmwasm-template

./: .gitignore  Cargo.toml  README.md
contracts/my-contract/: Cargo.toml
contracts/my-contract/src/: error.rs  execute.rs  instantiate.rs  lib.rs  msg.rs  query.rs  state.rs
