[workspace]
members = ["contracts/*", "packages/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
cw-storage-plus = "2.0.0"
cw-storage-macro = "2.0.0"
cosmwasm-std = { version = "2.0.4" }
cosmwasm-schema = "2.0.4"
serde = { version = "1.0.203", features = ["derive"] }
serde-json-wasm = { version = "1.0.1" }
thiserror = "1.0.61"

cw-multi-test = "2.0.1"